--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,7 @@ dependencies {
     compile 'com.mikepenz:google-material-typeface:2.2.0.3.original@aar'
     compile 'com.mikepenz:iconics-core:2.8.2@aar'
     compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.afollestad:digitus:0.3.0'
     testCompile 'junit:junit:4.12'
 }
