--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,8 @@ android {
         applicationId "eu.z3r0byteapps.magistertokens"
         minSdkVersion 15
         targetSdkVersion 24
-        versionCode 3
-        versionName "1.2"
+        versionCode 5
+        versionName "1.5"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -53,5 +53,6 @@ dependencies {
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.afollestad:digitus:0.3.0'
+    compile 'com.afollestad:material-camera:0.4.4'
     testCompile 'junit:junit:4.12'
 }
